crates/unsoundness_checker/tests/snapshots/extensive/markdown_test__typing_type_is_used.snap
---
source: crates/unsoundness_checker/tests/markdown_test.rs
expression: combined_output
---
### Basic incorrect TypeIs

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs always returning False

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:29
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_string(x: object) -> TypeIs[str]:
  |                             ^^^^^^^^^^^
4 |     return False
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with wrong check

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:35
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_list_of_ints(x: object) -> TypeIs[list[int]]:
  |                                   ^^^^^^^^^^^^^^^^^
4 |     return isinstance(x, list)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### Multiple TypeIs functions

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:6:26
  |
4 |     return True
5 |
6 | def is_str(x: object) -> TypeIs[str]:
  |                          ^^^^^^^^^^^
7 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs in class method

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:5:35
  |
3 | class Validator:
4 |     @staticmethod
5 |     def is_positive(x: object) -> TypeIs[int]:
  |                                   ^^^^^^^^^^^
6 |         return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with generic

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:6:27
  |
4 | T = TypeVar('T')
5 |
6 | def is_list(x: object) -> TypeIs[list[T]]:
  |                           ^^^^^^^^^^^^^^^
7 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs narrowing to wrong subtype

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
  --> main.py:10:26
   |
 8 |         pass
 9 |
10 | def is_dog(x: Animal) -> TypeIs[Dog]:
   |                          ^^^^^^^^^^^
11 |     return True
   |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with union

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:33
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int_or_str(x: object) -> TypeIs[int | str]:
  |                                 ^^^^^^^^^^^^^^^^^
4 |     return isinstance(x, bool)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs in conditional

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:43
  |
1 | from typing_extensions import TypeIs
2 |
3 | def maybe_int(x: object, strict: bool) -> TypeIs[int]:
  |                                           ^^^^^^^^^^^
4 |     return True if strict else False
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with complex type

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:35
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_dict_str_int(x: object) -> TypeIs[dict[str, int]]:
  |                                   ^^^^^^^^^^^^^^^^^^^^^^
4 |     return isinstance(x, dict)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### Nested TypeIs checks

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:6:35
  |
4 |     return True
5 |
6 | def is_positive_int(x: object) -> TypeIs[int]:
  |                                   ^^^^^^^^^^^
7 |     return is_int(x)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with Protocol

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:6:31
  |
4 |     def draw(self) -> None: ...
5 |
6 | def is_drawable(x: object) -> TypeIs[Drawable]:
  |                               ^^^^^^^^^^^^^^^^
7 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs in lambda (if possible)


### TypeIs with Literal

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:4:27
  |
2 | from typing import Literal
3 |
4 | def is_success(x: str) -> TypeIs[Literal["success"]]:
  |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^
5 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs narrowing from Any

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:4:23
  |
2 | from typing_extensions import TypeIs
3 |
4 | def is_int(x: Any) -> TypeIs[int]:
  |                       ^^^^^^^^^^^
5 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### Multiple parameters with TypeIs

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:44
  |
1 | from typing_extensions import TypeIs
2 |
3 | def are_both_ints(x: object, y: object) -> TypeIs[int]:
  |                                            ^^^^^^^^^^^
4 |     return True
  |
info: rule `typing-type-is-used` was selected in the configuration file


### Correct TypeIs implementation

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:26
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_int(x: object) -> TypeIs[int]:
  |                          ^^^^^^^^^^^
4 |     return isinstance(x, int)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs with proper validation

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
 --> main.py:3:35
  |
1 | from typing_extensions import TypeIs
2 |
3 | def is_list_of_ints(x: object) -> TypeIs[list[int]]:
  |                                   ^^^^^^^^^^^^^^^^^
4 |     return isinstance(x, list) and all(isinstance(i, int) for i in x)
  |
info: rule `typing-type-is-used` was selected in the configuration file


### TypeIs narrowing with isinstance

warning[typing-type-is-used]: Using `typing.TypeIs` can lead to runtime type errors.
  --> main.py:10:26
   |
 8 |         pass
 9 |
10 | def is_dog(x: Animal) -> TypeIs[Dog]:
   |                          ^^^^^^^^^^^
11 |     return isinstance(x, Dog)
   |
info: rule `typing-type-is-used` was selected in the configuration file
